sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:18: error: method traverse has return statement; needs result type
    return;
    ^